--- a/app/src/app/pages/login/login.component.html
+++ b/app/src/app/pages/login/login.component.html
@@ -11,18 +11,18 @@
       <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority>
     </div>
     <h1 class="text-2xl font-semibold mb-4">Login</h1>
-    <form action="#" method="POST">
+    <form action="#" [formGroup]="loginForm">
       <!-- Username Input -->
       <div class="mb-4">
         <label for="username" class="block text-gray-600">Username</label>
-        <input type="text" id="username" name="username"
+        <input type="text" id="username" name="username" formControlName="email"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Password</label>
-        <input type="password" id="password" name="password"
+        <input type="password" id="password" name="password" formControlName="password"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
@@ -32,7 +32,8 @@
         <label for="remember" class="text-green-900 ml-2">Remember Me</label>
       </div>
       <!-- Login Button -->
-      <button type="submit" class="bg-[#227027] hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full">
+      <button type="submit" class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
+        [disabled]="!loginForm.valid" (click)="login()">
         Login
       </button>
     </form>
