--- a/app/src/app/pages/sign-up/sign-up.component.html
+++ b/app/src/app/pages/sign-up/sign-up.component.html
@@ -11,44 +11,38 @@
       <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority>
     </div>
     <h1 class="text-2xl font-semibold mb-4">Login</h1>
-    <form action="#" method="POST">
-      <!-- Username Input -->
-      <div class="mb-4">
-        <label for="username" class="block text-gray-600">Username</label>
-        <input type="text" id="username" name="username"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
-      </div>
+    <form action="#" method="POST" [formGroup]="signUpForm">
       <!-- Name Input -->
       <div class="mb-4">
         <label for="name" class="block text-gray-600">Name</label>
-        <input type="text" id="name" name="name"
+        <input type="text" id="name" name="name" formControlName="name"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
       <!-- Lastname Input -->
       <div class="mb-4">
         <label for="lastname" class="block text-gray-600">Lastname</label>
-        <input type="text" id="lastname" name="lastname"
+        <input type="text" id="lastname" name="lastname" formControlName="lastname"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
       <!-- Email Input -->
       <div class="mb-4">
         <label for="email" class="block text-gray-600">Email</label>
-        <input type="text" id="email" name="email"
+        <input type="text" id="email" name="email" formControlName="email"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Password</label>
-        <input type="password" id="password" name="password"
+        <input type="password" id="password" name="password" formControlName="password"
                class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
                autocomplete="off">
       </div>
       <!-- Sign Up Button -->
-      <button type="submit" class="bg-[#227027] hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full">
+      <button type="submit" class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
+        [disabled]="!signUpForm.valid" (click)="signUp()">
         Sign Up
       </button>
     </form>
