--- a/app/src/app/pages/sign-up/sign-up.component.html
+++ b/app/src/app/pages/sign-up/sign-up.component.html
@@ -2,47 +2,109 @@
 <div class="flex flex-row-reverse justify-center items-center h-screen">
   <!-- Left: Image -->
   <div class="w-1/2 h-screen hidden lg:block">
-    <img ngSrc="assets/green-gradient.jpg" alt="Placeholder Image"
-         class="object-cover w-full h-full" width="400" height="200" priority>
+    <img
+      ngSrc="assets/green-gradient.jpg"
+      alt="Placeholder Image"
+      class="object-cover w-full h-full"
+      width="400"
+      height="200"
+      priority
+    />
   </div>
   <!-- Right: Login Form -->
   <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
     <div class="flex justify-center mb-8">
-      <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority>
+      <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority />
     </div>
     <h1 class="text-2xl font-semibold mb-4">Login</h1>
     <form action="#" method="POST" [formGroup]="signUpForm">
       <!-- Name Input -->
       <div class="mb-4">
         <label for="name" class="block text-gray-600">Name</label>
-        <input type="text" id="name" name="name" formControlName="name"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="text"
+          id="name"
+          name="name"
+          formControlName="name"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
       </div>
       <!-- Lastname Input -->
       <div class="mb-4">
         <label for="lastname" class="block text-gray-600">Lastname</label>
-        <input type="text" id="lastname" name="lastname" formControlName="lastname"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="text"
+          id="lastname"
+          name="lastname"
+          formControlName="lastname"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
       </div>
       <!-- Email Input -->
       <div class="mb-4">
         <label for="email" class="block text-gray-600">Email</label>
-        <input type="text" id="email" name="email" formControlName="email"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="text"
+          id="email"
+          name="email"
+          formControlName="email"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
+      </div>
+      <!-- Phone Input -->
+      <div class="mb-4">
+        <label for="phone" class="block text-gray-600">Teléfono</label>
+        <input
+          type="text"
+          id="phone"
+          name="phone"
+          formControlName="phone"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
+      </div>
+      <!-- BirthDate Input -->
+      <div class="mb-4">
+        <label for="birthDate" class="block text-gray-600"
+          >Fecha de nacimiento</label
+        >
+        <input
+          type="date"
+          id="birthDate"
+          name="birthDate"
+          formControlName="birthDate"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
       </div>
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Password</label>
-        <input type="password" id="password" name="password" formControlName="password"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="password"
+          id="password"
+          name="password"
+          formControlName="password"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
+      </div>
+      <div
+        class="bg-red-300 my-4 rounded border border-red-600 py-2 px-4"
+        *ngIf="errorMsg"
+      >
+        {{ errorMsg }}
       </div>
       <!-- Sign Up Button -->
-      <button type="submit" class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
-        [disabled]="!signUpForm.valid" (click)="signUp()">
+      <button
+        type="submit"
+        class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
+        [disabled]="!signUpForm.valid"
+        (click)="signUp()"
+      >
         Sign Up
       </button>
     </form>
