--- a/app/src/app/pages/login/login.component.html
+++ b/app/src/app/pages/login/login.component.html
@@ -2,43 +2,71 @@
 <div class="flex justify-center items-center h-screen">
   <!-- Left: Image -->
   <div class="w-1/2 h-screen hidden lg:block">
-    <img ngSrc="assets/green-gradient.jpg" alt="Placeholder Image"
-         class="object-cover w-full h-full" width="400" height="200" priority>
+    <img
+      ngSrc="assets/green-gradient.jpg"
+      alt="Placeholder Image"
+      class="object-cover w-full h-full"
+      width="400"
+      height="200"
+      priority
+    />
   </div>
   <!-- Right: Login Form -->
   <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
     <div class="flex justify-center mb-8">
-      <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority>
+      <img ngSrc="assets/SalusLogo.png" width="400" height="200" priority />
     </div>
     <h1 class="text-2xl font-semibold mb-4">Login</h1>
     <form action="#" [formGroup]="loginForm">
       <!-- Username Input -->
       <div class="mb-4">
         <label for="username" class="block text-gray-600">Username</label>
-        <input type="text" id="username" name="username" formControlName="email"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="text"
+          id="username"
+          name="username"
+          formControlName="email"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
       </div>
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Password</label>
-        <input type="password" id="password" name="password" formControlName="password"
-               class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
-               autocomplete="off">
+        <input
+          type="password"
+          id="password"
+          name="password"
+          formControlName="password"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
       </div>
       <!-- Remember Me Checkbox -->
       <div class="mb-4 flex items-center">
-        <input type="checkbox" id="remember" name="remember" class="text-red-500">
+        <input
+          type="checkbox"
+          id="remember"
+          name="remember"
+          class="text-red-500"
+        />
         <label for="remember" class="text-green-900 ml-2">Remember Me</label>
       </div>
 
-      <div class="bg-red-300 my-4 rounded border border-red-600 py-2 px-4" *ngIf="errorMsg">
-        {{errorMsg |json}}
+      <div
+        class="bg-red-300 my-4 rounded border border-red-600 py-2 px-4"
+        *ngIf="errorMsg"
+      >
+        {{ errorMsg }}
       </div>
 
       <!-- Login Button -->
-      <button type="submit" class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
-        [disabled]="!loginForm.valid" (click)="login()">
+      <button
+        type="submit"
+        class="bg-[#227027] disabled:bg-gray-500 hover:bg-[#015a06] text-white font-semibold rounded-md py-2 px-4 w-full"
+        [disabled]="!loginForm.valid"
+        (click)="login()"
+      >
         Login
       </button>
     </form>
